--- a/Louvores-domingo/domingo-style.css
+++ b/Louvores-domingo/domingo-style.css
@@ -138,6 +138,13 @@ iframe{
     width: 150px;
 height: 100px;}
 
+.rodape{text-align: end;
+margin-bottom: 50px;
+margin-right: 30px;}
+
+.voltar-inicio{font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: blueviolet;
+font-size: 24px;}
 
 @media(max-width: 425px){
 
@@ -176,5 +183,14 @@ a {
     color: black;
     font-weight: 700;
     font-size: 24px;
+}
+
+.rodape{text-align: center;
+    margin-bottom: 30px;
+    }
+    
+    .voltar-inicio{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color:sienna;
+    font-size: 20px;
 }
 }
