--- a/Tons-favoritos/tons-style.css
+++ b/Tons-favoritos/tons-style.css
@@ -83,12 +83,29 @@ font-weight: 700;
 font-family: cursive;
 }
 
+.rodape{text-align: center;
+    margin-bottom: 30px;
+    }
+    
+    .voltar-inicio{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color:brown;
+    font-size: 20px;
+}
+
+a{text-decoration: none;}
 
 @media(max-width: 425px){
     .container{display: block;
         background-color: wheat;
     }
-
+    .rodape{text-align: center;
+        margin-bottom: 30px;
+        }
+        
+        .voltar-inicio{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            color:teal;
+        font-size: 20px;
+    }
    
 }
 
