--- a/Louvores-domingo/domingo-style.css
+++ b/Louvores-domingo/domingo-style.css
@@ -8,19 +8,23 @@ html {
     box-sizing: border-box;
 }
 
-.titulo{font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-font-size: 40px;
-color:crimson;
-font-weight: 400;
-margin: 20px;}
+.titulo {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 40px;
+    color: crimson;
+    font-weight: 400;
+    margin: 20px;
+}
 
-img{border-radius: 50%;}
+img {
+    border-radius: 50%;
+}
 
 .container {
     display: flex;
     align-items: center;
     justify-self: center;
-    padding: 40px;
+    padding: 30px;
 }
 
 
@@ -41,7 +45,7 @@ a {
 }
 
 a:hover {
-    background-color:darkcyan;
+    background-color: darkcyan;
     color: white;
     border-radius: 20%;
     transition: 0.6s;
@@ -50,10 +54,11 @@ a:hover {
 
 .container-musicas {
     display: grid;
-    grid-template-areas: "musica1 musica2 musica3 musica4"
-                          "videos";
-    grid-template-columns: repeat(3 1fr);
-    
+    grid-template-areas: "musica1 musica2 musica3 musica4 muscica5 musica6 musica7"
+    ;
+
+    grid-template-columns: repeat(7 1fr);
+
 }
 
 
@@ -63,7 +68,7 @@ a:hover {
 .musica1 {
     grid-area: musica1;
     grid-template-columns: auto;
- 
+
 }
 
 
@@ -76,52 +81,103 @@ a:hover {
 
 .musica3 {
     grid-area: musica3;
-    grid-template-columns: auto; 
+    grid-template-columns: auto;
 }
 
-.musica4{grid-area: musica4;
-    grid-template-columns: auto;}
+.musica4 {
+    grid-area: musica4;
+    grid-template-columns: auto;
+}
 
-.musica1{margin: 30px;
+.musica5 {
+    grid-area: musica5;
+    grid-template-columns: auto;
+}
+
+.musica6 {
+    grid-area: musica6;
+    grid-template-columns: auto;
+}
+
+.musica7 {
+    grid-area: musica7;
+    grid-template-columns: auto;
+  
+}
+
+
+
+
+
+
+.musica1 {
+    margin: 30px;
     padding: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 30px; 
- 
+    font-size: 30px;
+
 }
 
 
-.musica2{margin: 30px;
-    padding: 30px;
- 
-}
-
-
-.musica3{margin: 30px;
+.musica2 {
+    margin: 30px;
     padding: 30px;
 
 }
 
-.musica4{margin: 30px;
+
+.musica3 {
+    margin: 30px;
     padding: 30px;
 
 }
 
-.nome{margin-top: 10px;}
+.musica4 {
+    margin: 30px;
+    padding: 30px;
+
+}
+
+.musica5 {
+    margin: 30px;
+    padding: 30px;
+
+}
+
+.musica6 {
+    margin: 30px;
+    padding: 30px;
+
+}
+
+.musica7 {
+    margin: 30px;
+    padding: 30px;
+
+}
+
+.nome {
+    margin-top: 10px;
+}
 
 .menu {
     display: flex;
     justify-content: space-between;
 }
 
-.tom{color: blue;
-font-size: 20px;
-margin: 20px;}
+.tom {
+    color: blue;
+    font-size: 20px;
+    margin: 20px;
+}
 
-.nome{font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-color: chocolate;
-font-weight: 800;
-font-size: 26px;
-margin-top: 20px;}
+.nome {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: chocolate;
+    font-weight: 800;
+    font-size: 26px;
+    margin-top: 20px;
+}
 
 .container-musicas .menu {
     font-size: 30px;
@@ -133,51 +189,56 @@ margin-top: 20px;}
 
 
 
-iframe{
-    margin-top: 30px;
+iframe {
+margin-top: 10px;
     width: 150px;
-height: 100px;}
-
-
-
-@media(max-width: 425px){
-
-
-.container{display: flex;
-    padding: 40px;
-   
-    
-  
-    
-}  
-  
-.menu{display: block;
+    height: 100px;
 }
 
 
 
-.titulo{
-    font-size: 22px;
-    text-align: center;
+@media(max-width: 425px) {
+
+
+    .container {
+        display: flex;
+        padding: 40px;
+
+
+
+
+    }
+
+    .menu {
+        display: block;
+    }
+
+
+
+    .titulo {
+        font-size: 22px;
+        text-align: center;
+    }
+
+
+    .logo {
+        width: 80px;
+
+    }
+
+    .container-musicas {
+        display: flex;
+
+        justify-content: center;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+        font-weight: 700;
+        font-size: 24px;
+    }
+
+.musica7{text-align: center;
 }
-
-
-.logo{
-    width: 80px;
- 
-}
-
-.container-musicas{display: flex;
-
-    justify-content: center;  
-}
-
-a {
-    text-decoration: none;
-    color: black;
-    font-weight: 700;
-    font-size: 24px;
-}
-
-
 }
