--- a/Louvores-domingo/domingo-style.css
+++ b/Louvores-domingo/domingo-style.css
@@ -54,9 +54,9 @@ a:hover {
 
 .container-musicas {
     display: grid;
-    grid-template-areas: "musica1 musica2 musica3 musica4"; 
+    grid-template-areas: "musica1 musica2"; 
 
-    grid-template-columns: repeat(4 1fr);
+    grid-template-columns: repeat(2 1fr);
 
 }
 
@@ -67,6 +67,10 @@ a:hover {
 .musica1 {
     grid-area: musica1;
     grid-template-columns: auto;
+    
+    
+    
+   
  
 
 }
@@ -76,6 +80,7 @@ a:hover {
 .musica2 {
     grid-area: musica2;
     grid-template-columns: auto;
+  
 
 }
 
@@ -96,6 +101,8 @@ a:hover {
     padding: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 30px;
+    width: 400px;
+ 
 
 }
 
