--- a/Louvores-sexta/louvor-sexta-style.css
+++ b/Louvores-sexta/louvor-sexta-style.css
@@ -39,13 +39,22 @@ a {
     font-size: 30px;
 }
 
+
+
 a:hover {
-    background-color:darkcyan;
-    color: white;
+ 
+    color: brown;
     border-radius: 20%;
     transition: 0.6s;
 }
 
+
+.link{font-size: 60px;
+color: brown;
+
+}
+
+.icon{font-size: 50px;}
 
 .container-musicas {
     display: grid;
