--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+button{
+    margin-left: 40px;
+    padding: 10px 20px;
+      font-size: 1rem;
+      font-weight: 600;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+}
+
 .aniversario{color: blue;}
 
 * {
@@ -6,7 +19,8 @@
     padding: 0;
 }
 
-.titulo{color: white;}
+.titulo{color: white;
+}
 
 .escala {
     grid-area: escala;
@@ -53,7 +67,7 @@ a:hover {
 a {
     text-decoration: none;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
    
 }
 
